src/objects/Project__c.object
<CustomObject>
    <description>Object created for project management tracking</description>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>TEXT(Account__r.Mailing_Billing_State_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Designer_1_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of first Dashboard Admin/Designer trained.</description>
        <label>Admin/Designer 1 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Designer_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of second Dashboard Admin/Designer trained.</description>
        <label>Admin/Designer 2 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Designer_3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of third Dashboard Admin/Designer trained.</description>
        <label>Admin/Designer 3 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Designer_Training_Completed_On__c</fullName>
        <description>This is the date when the Admin/Designer training was completed.</description>
        <label>Admin/Designer Training Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Price__c</fullName>
        <label>Asset Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAD_Vendor__c</fullName>
        <label>CAD Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>Anteon</fullName>
                </value>
                <value>
                    <fullName>AS400</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>CODY Systems</fullName>
                </value>
                <value>
                    <fullName>CompuDyne</fullName>
                </value>
                <value>
                    <fullName>Constellation</fullName>
                </value>
                <value>
                    <fullName>Crimes</fullName>
                </value>
                <value>
                    <fullName>CRISNET</fullName>
                </value>
                <value>
                    <fullName>Data Pursuit</fullName>
                </value>
                <value>
                    <fullName>dBase</fullName>
                </value>
                <value>
                    <fullName>DM Data</fullName>
                </value>
                <value>
                    <fullName>DSD</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Enforsys</fullName>
                </value>
                <value>
                    <fullName>FDM</fullName>
                </value>
                <value>
                    <fullName>GEAC</fullName>
                </value>
                <value>
                    <fullName>Geo911</fullName>
                </value>
                <value>
                    <fullName>Global Software</fullName>
                </value>
                <value>
                    <fullName>HiTech</fullName>
                </value>
                <value>
                    <fullName>HTE</fullName>
                </value>
                <value>
                    <fullName>ID Networks</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Infor</fullName>
                </value>
                <value>
                    <fullName>Informant</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Interact</fullName>
                </value>
                <value>
                    <fullName>Intergraph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Entire project completed.</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of a contact that was involved in the project planning discussion.</description>
        <label>Contact Name 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of a contact that was involved in the project planning discussion.</description>
        <label>Contact Name 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of a contact that was involved in the project planning discussion.</description>
        <label>Contact Name 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Matrix_Updates_FV_Desktop_Only__c</fullName>
        <label>Cost Matrix Updates (FV Desktop Only)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dashboard_Version__c</fullName>
        <label>Dashboard Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Lead__c</fullName>
        <description>Omega staff member responsible for the deployment of Omega server based applications, such as configuring IIS and setting up the website</description>
        <inlineHelpText>Omega staff member responsible for the deployment of Omega server based applications, such as configuring IIS and setting up the website</inlineHelpText>
        <label>Deployment Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bob Henry</fullName>
                </value>
                <value>
                    <fullName>Brandon Stam</fullName>
                </value>
                <value>
                    <fullName>Bruce Silva</fullName>
                </value>
                <value>
                    <fullName>Dean Daniels</fullName>
                </value>
                <value>
                    <fullName>Jeremy Duval</fullName>
                </value>
                <value>
                    <fullName>Matt Mazurkivich</fullName>
                </value>
                <value>
                    <fullName>Mike Fowler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESRI_Products__c</fullName>
        <description>ESRI software products</description>
        <label>ESRI Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_User_Training_Completed_On__c</fullName>
        <description>This is the date that the end-user training was completed.</description>
        <label>End-User Training Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Training_Scheduled_For__c</fullName>
        <description>This is the date the end-user training is scheduled for.</description>
        <label>End-User Training Scheduled For</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <label>Fixed Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_or_Hourly_Rate__c</fullName>
        <label>Fixed Price or Hourly Rate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography_Layer_Updates__c</fullName>
        <label>Geography Layer Updates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>&quot;Go Live&quot; Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosted_or_On_Premise__c</fullName>
        <label>Hosted or On-Premise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hosted</fullName>
                </value>
                <value>
                    <fullName>On-Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Total number of hours spent on project</description>
        <inlineHelpText>Total number of hours spent on project</inlineHelpText>
        <label>Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Profile_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import Profile Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickoff_Date__c</fullName>
        <description>Date of project planning discussion with client.</description>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Project_Number__c</fullName>
        <description>Originating project number from Omega</description>
        <label>Legacy Project Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Table_Updates__c</fullName>
        <label>Lookup Table Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Cache_Updates__c</fullName>
        <label>Map Cache Updates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Omega_Products__c</fullName>
        <description>Omega software products</description>
        <label>Omega Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Omega_Software_Delivery_Type__c</fullName>
        <label>Omega Software Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Will Obtain Software From Project Lead</fullName>
                </value>
                <value>
                    <fullName>Send Software to Software Recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Project_Team_Members__c</fullName>
        <description>Other Implementation staff working on this project</description>
        <label>Other Project Team Members</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andrew Hart</fullName>
                </value>
                <value>
                    <fullName>Blake Brown</fullName>
                </value>
                <value>
                    <fullName>Bob Henry</fullName>
                </value>
                <value>
                    <fullName>Brandon Stam</fullName>
                </value>
                <value>
                    <fullName>Brittany Burson</fullName>
                </value>
                <value>
                    <fullName>Brittany Thies</fullName>
                </value>
                <value>
                    <fullName>Bruce Silva</fullName>
                </value>
                <value>
                    <fullName>Chase Jones</fullName>
                </value>
                <value>
                    <fullName>Colby Schofield</fullName>
                </value>
                <value>
                    <fullName>Dean Daniels</fullName>
                </value>
                <value>
                    <fullName>Jeremy Duval</fullName>
                </value>
                <value>
                    <fullName>Juan Franquez</fullName>
                </value>
                <value>
                    <fullName>Kendall Schrodt</fullName>
                </value>
                <value>
                    <fullName>LaTricia White</fullName>
                </value>
                <value>
                    <fullName>Liza Wright</fullName>
                </value>
                <value>
                    <fullName>Mark Jenkins</fullName>
                </value>
                <value>
                    <fullName>Michael Bouvet</fullName>
                </value>
                <value>
                    <fullName>Nicholas Dunigan</fullName>
                </value>
                <value>
                    <fullName>Quentin Gregg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_terms_if_not_50_40_10__c</fullName>
        <label>Payment terms (if not 50/40/10)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Peer_Reviewer_Date__c</fullName>
        <description>Implementation staff member who reviewed the application prior to deployment &amp; the date that review occurred on.</description>
        <inlineHelpText>Implementation staff member who reviewed the application prior to deployment &amp; the date that review occurred on.</inlineHelpText>
        <label>Peer Reviewer &amp; Date</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_of_Work_Completed__c</fullName>
        <description>Percentage of the total project work completed. Disregard is project status is &quot;Complete&quot;</description>
        <label>Percent of Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planning_Comments__c</fullName>
        <label>Planning Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Installation_Action_Items__c</fullName>
        <description>Action items that require follow-up once an application has been deployed. The items typically assign responsibility and have a general timeline for completion.</description>
        <label>Post Installation Action Items</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Asset_TriTech_Sales_Order__c</fullName>
        <formula>Project_Asset__r.TriTech_Sales_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Asset TriTech Sales Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Asset__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Asset__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Assignment_Date__c</fullName>
        <description>Date of Project Assignment</description>
        <label>Project Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <description>Any pertinent details relating to the planning, development or deployment of the project</description>
        <label>Project Details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <description>Staff member serving as primary contact for the project</description>
        <inlineHelpText>Staff member serving as primary contact for the project</inlineHelpText>
        <label>Project Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andrew Hart</fullName>
                </value>
                <value>
                    <fullName>Awaiting Project Builder</fullName>
                </value>
                <value>
                    <fullName>Blake Brown</fullName>
                </value>
                <value>
                    <fullName>Bob Henry</fullName>
                </value>
                <value>
                    <fullName>Brandon Stam</fullName>
                </value>
                <value>
                    <fullName>Brittany Burson</fullName>
                </value>
                <value>
                    <fullName>Brittany Thies</fullName>
                </value>
                <value>
                    <fullName>Bruce Silva</fullName>
                </value>
                <value>
                    <fullName>Chase Jones</fullName>
                </value>
                <value>
                    <fullName>Colby Schofield</fullName>
                </value>
                <value>
                    <fullName>Dean Daniels</fullName>
                </value>
                <value>
                    <fullName>Jeremy Duval</fullName>
                </value>
                <value>
                    <fullName>Juan Franquez</fullName>
                </value>
                <value>
                    <fullName>Kendall Schrodt</fullName>
                </value>
                <value>
                    <fullName>LaTricia White</fullName>
                </value>
                <value>
                    <fullName>Liza Wright</fullName>
                </value>
                <value>
                    <fullName>Mark Jenkins</fullName>
                </value>
                <value>
                    <fullName>Matt Mazurkivich</fullName>
                </value>
                <value>
                    <fullName>Michael Bouvet</fullName>
                </value>
                <value>
                    <fullName>Mike Fowler</fullName>
                </value>
                <value>
                    <fullName>Nicholas Dunigan</fullName>
                </value>
                <value>
                    <fullName>Quentin Gregg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status_Comments__c</fullName>
        <inlineHelpText>Brief description explaining status of project</inlineHelpText>
        <label>Project Status Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Status of the project</description>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>On Hold - Client</fullName>
                </value>
                <value>
                    <fullName>On Hold - Omega</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_of_Hours__c</fullName>
        <label>Projected # of Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDBMS__c</fullName>
        <label>RDBMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS400</fullName>
                </value>
                <value>
                    <fullName>c-tree</fullName>
                </value>
                <value>
                    <fullName>DB2</fullName>
                </value>
                <value>
                    <fullName>Informix</fullName>
                </value>
                <value>
                    <fullName>MS Access</fullName>
                </value>
                <value>
                    <fullName>MS Excel</fullName>
                </value>
                <value>
                    <fullName>MS Fox Pro</fullName>
                </value>
                <value>
                    <fullName>MS SQL Server</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Pervasive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Vendor__c</fullName>
        <label>RMS Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4D Fire</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>Aether</fullName>
                </value>
                <value>
                    <fullName>Anteon</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>ARJIS</fullName>
                </value>
                <value>
                    <fullName>AS400</fullName>
                </value>
                <value>
                    <fullName>BioKey</fullName>
                </value>
                <value>
                    <fullName>C.H.A.I.R.S.</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>CityScape</fullName>
                </value>
                <value>
                    <fullName>CODY Systems</fullName>
                </value>
                <value>
                    <fullName>CompuDyne</fullName>
                </value>
                <value>
                    <fullName>Constellation</fullName>
                </value>
                <value>
                    <fullName>Crimes</fullName>
                </value>
                <value>
                    <fullName>Crimestar</fullName>
                </value>
                <value>
                    <fullName>CRISNET</fullName>
                </value>
                <value>
                    <fullName>Data Pursuit</fullName>
                </value>
                <value>
                    <fullName>dBase</fullName>
                </value>
                <value>
                    <fullName>Denali</fullName>
                </value>
                <value>
                    <fullName>DM Data</fullName>
                </value>
                <value>
                    <fullName>DSD</fullName>
                </value>
                <value>
                    <fullName>EIS</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Enforsys</fullName>
                </value>
                <value>
                    <fullName>ETI</fullName>
                </value>
                <value>
                    <fullName>FDM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saved_Query_Updates__c</fullName>
        <label>Saved Query Updates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>List of available professional services provided</description>
        <label>Service Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adding New Fields to an Existing Dataset</fullName>
                </value>
                <value>
                    <fullName>Boundary Redistricting</fullName>
                </value>
                <value>
                    <fullName>Crystal Reports</fullName>
                </value>
                <value>
                    <fullName>Dashboard - Professional Service</fullName>
                </value>
                <value>
                    <fullName>Delivery of Purchased Licenses</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Fire Study - Citygate</fullName>
                </value>
                <value>
                    <fullName>FireView - Street Tuning</fullName>
                </value>
                <value>
                    <fullName>Geocoding</fullName>
                </value>
                <value>
                    <fullName>GIS Data Editing</fullName>
                </value>
                <value>
                    <fullName>Import Profile</fullName>
                </value>
                <value>
                    <fullName>Omega Project Migration (New PC/Server)</fullName>
                </value>
                <value>
                    <fullName>Saved Queries Update</fullName>
                </value>
                <value>
                    <fullName>School District Consulting - General</fullName>
                </value>
                <value>
                    <fullName>SchoolPlanner Yearly Geocoding</fullName>
                </value>
                <value>
                    <fullName>TeleAtlas Streets</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <description>Software products to be mailed on first shipment request</description>
        <inlineHelpText>Software products to be mailed on first shipment request</inlineHelpText>
        <label>Software</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staging_Date__c</fullName>
        <label>Staging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Closure_Date_Confidence__c</fullName>
        <description>Rating of project lead&apos;s confidence in the Predicted Completion Date provided for this project. Considerations should include:
*Project lead&apos;s workload and travel schedule
*The amount of work yet to be done
*Training schedule status (scheduled/completed or not)
*Web deployment delay
*Responsiveness of client
*Review periods and updates
*10 business day period after completion letter is sent</description>
        <inlineHelpText>Confidence in prediction considering:
*Project lead&apos;s workload and travel schedule
*Amount of work yet to be done
*Training schedule/status
*Web deployment delay
*Responsiveness of client
*Review periods and updates
*10 bus. day comp letter period</inlineHelpText>
        <label>Target Closure Date Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% - Project Is Complete</fullName>
                </value>
                <value>
                    <fullName>95% - Very certain. Timeline is planned including completion letter period.</fullName>
                </value>
                <value>
                    <fullName>90% - Pretty certain. Almost no risk of delay, and workload allows necessary time.</fullName>
                </value>
                <value>
                    <fullName>85% - Very good chance. Small risk of delay, and workload allows necessary time.</fullName>
                </value>
                <value>
                    <fullName>75% - Good chance, but circumstances and/or workload will need to be favorable to complete in time.</fullName>
                </value>
                <value>
                    <fullName>60% - Will close by this date only if circumstances and workload are favorable.</fullName>
                </value>
                <value>
                    <fullName>50% - Might close as predicted. Substantial risk.</fullName>
                </value>
                <value>
                    <fullName>&lt;50% - Too early to set firm dates.</fullName>
                </value>
                <value>
                    <fullName>&lt;10% - Project is perpetually stalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Closure_Date__c</fullName>
        <description>Project lead&apos;s best estimate of when the project will be completed</description>
        <inlineHelpText>Project lead&apos;s best estimate of when the project will be completed</inlineHelpText>
        <label>Target Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Hours__c</fullName>
        <label>Total Cost (Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>